fix(theme): extend footer to align with sidebar layout
Footer now has margin-left matching sidebar width so it doesn't span
full page width. Responsive rule removes margin on mobile.

--- a/content/themes/avancer-simplement/assets/css/screen.css
+++ b/content/themes/avancer-simplement/assets/css/screen.css
@@ -2130,7 +2130,7 @@ iframe.instagram-media + script + :not([id]) {
 
 .site-footer {
     position: relative;
-    margin: max(12vmin, 64px) 0 0 0;
+    margin: max(12vmin, 64px) 0 0 260px;
     padding-top: 48px;
     padding-bottom: 140px;
     color: #fff;
@@ -2199,6 +2199,9 @@ iframe.instagram-media + script + :not([id]) {
 }
 
 @media (max-width: 767px) {
+    .site-footer {
+        margin-left: 0;
+    }
     .site-footer .inner {
         max-width: 500px;
         grid-template-columns: 1fr;
